@@ -93,6 +93,8 @@ interface LMSHelpdeskManagerInterface
 
     public function GetTicketContents($id, $short = false);
 
+    public function GetTicketSubject($id);
+
     public function GetMessage($id);
 
     public function GetFirstMessage($ticketid);
@@ -129,7 +131,7 @@ interface LMSHelpdeskManagerInterface
 
     public function GetChildTickets($ticketid);
 
-    public function getSelectedRelatedTickets(array $ticketids);
+    public function getTickets(array $ticketids);
 
     public function GetTicketParentID($ticketid);
 
